deployments/webapp-ingress-tls-test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  annotations:
    cert-manager.io/cluster-issuer: "my-ca-issuer"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - webapp.home
    secretName: webapp-tls
  rules:
  - host: webapp.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp
            port:
              number: 80
